# Correlation_structure

./: CMakeLists.txt  main.cpp
src/: CorrelationStructure.h  Equation.h  FactorCorrelation.h
src/Model/: CorrelationStructure.cpp  Equation.cpp  FactorCorrelation.cpp
